# AI-Trading-Automation

./: .gitignore  CLAUDE.md  README.md
tradesage/: .env.example  CLAUDE.md  README.md  pyproject.toml  requirements.txt
tradesage/backend/: __init__.py  config.py  main.py
tradesage/backend/agents/: __init__.py  macro_check.py  mentor_agent.py  news_agent.py  orchestrator.py  risk_agent.py  trade_executor.py
tradesage/backend/agents/algorithm/: __init__.py  algorithm_master.py
tradesage/backend/agents/base/: master.py  micro.py
tradesage/backend/agents/deployment/: deployment_agent.py
tradesage/backend/agents/discovery/: __init__.py  discovery_master.py
tradesage/backend/agents/paper_trading/: paper_trader.py
tradesage/backend/agents/pipeline/: pipeline_orchestrator.py
tradesage/backend/analytics/: __init__.py  stats.py
tradesage/backend/data/: __init__.py  market_data.py  options_data.py  trade_history.py
tradesage/backend/db/: __init__.py  router.py  sqlite_store.py
tradesage/backend/knowledge/: __init__.py  graph_reasoner.py  graph_schema.py  graph_updater.py  ingest.py  web_scraper.py
tradesage/backend/llm/: cost_tracker.py  router.py
tradesage/backend/mentor/: book_suggester.py  pattern_analyzer.py
tradesage/backend/models/: __init__.py  deployed_algorithm.py  discovered_stock.py  gate_result.py  lesson.py  model_registry.py  research_report.py  signal.py  trade.py  trading_algorithm.py  validation_result.py
tradesage/frontend/: index.html  package-lock.json  package.json  tailwind.config.js
tradesage/frontend/src/: App.tsx  index.css
(+54 files in other folders)
