[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tradesage"
version = "1.0.0"
description = "TradeSage — Multi-Agent AI Trading System"
requires-python = ">=3.11"
dependencies = []

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "black>=24.0.0",
    "ruff>=0.8.0",
    "mypy>=1.14.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
